apps/lina-site/versioned_docs/version-0.2.x/quick/1000-overview.md
---
slug: '/quick/overview'
title: '项目介绍'
hide_title: true
description: '本文全面介绍 LinaPro 的项目背景、技术架构与核心功能。LinaPro 是一款面向可持续交付的 AI 原生全栈框架，基于 Go + Vue 3 构建，默认使用 PostgreSQL，支持可选 SQLite、原生多租户、官方插件子模块、Redis 集群协调、双模式插件系统、RBAC 权限管理、定时任务调度、在线 API 文档、可选但推荐的 OpenSpec 规范驱动 AI 研发工作流和覆盖全生命周期的 AI 技能体系，帮助开发者和企业快速构建可持续交付的业务系统。'
keywords:
  - LinaPro
  - AI原生框架
  - 全栈框架
  - Go框架
  - GoFrame
  - Vue3
  - Ant Design Vue
  - 插件系统
  - WASM插件
  - 源码插件
  - RBAC权限
  - 定时任务
  - 国际化
  - 快速开发
  - 插件生态
  - 管理工作台
  - PostgreSQL
  - JWT认证
  - 多租户
  - Redis协调器
  - OpenSpec可选组件
  - 跨平台命令
---


## 项目介绍

`LinaPro`是一款**面向可持续交付的`AI`原生全栈框架**，将规范驱动的`AI`研发工作流、全生命周期`AI`技能体系、完整插件运行时与前后端一体化全栈设计融为一体，并内置权限管理、系统配置、任务调度等企业级基础能力，为团队构建起一套完整的`AI`原生交付底座。团队无需从零搭建基础设施，从第一天起就能以`AI`作为主力驱动业务开发和持续交付。


## 快速链接

| 资源 | 地址 |
|------|------|
| **开源仓库** | https://github.com/linaproai/linapro |
| **后台演示** | http://demo.linapro.ai/admin <br/>账号：`admin` <br/>密码：`admin123`|
| **官方网站** | https://linapro.ai/ |

:::info 提示
演示站点只读，无法修改数据，但可以完整体验`LinaPro`的功能和管理工作台的使用流程。如果需要在本地体验完整的读写功能，可以使用官方提供的演示镜像快速部署一个完整的环境。
:::

## 演示镜像



可以在本地使用以下指令运行完整的演示镜像：

```bash
# 创建临时目录
mkdir linapro-demo && cd linapro-demo
# 下载配置文件和 Docker Compose 文件
curl -o config.yaml https://raw.githubusercontent.com/linaproai/linapro/refs/heads/main/hack/deploy/config.yaml
curl -o docker-compose.yaml https://raw.githubusercontent.com/linaproai/linapro/refs/heads/main/hack/deploy/docker-compose.yaml
# 启动服务
docker compose up
```

随后可以按镜像启动日志中的管理工作台地址访问`LinaPro`默认工作台，账号密码`admin/admin123`。源码开发环境的默认工作台地址为`http://localhost:5666/admin`，主框架接口地址为`http://localhost:9120`。

:::info 提示
其中的镜像版本为`nightly`表示每日构建镜像，主要用于测试使用，也可以修改为稳定的版本标签如`v0.2.0`等。
:::

## 项目定位

`LinaPro`面向独立开发者、研发团队和企业，提供以下核心能力：

| 能力 | 说明 |
|------|------|
| **AI 原生研发工作流** | 内置规范驱动的`AI`研发工作流，让`AI`主导分析、设计与实现，团队专注于方向决策 |
| **丰富的 AI 技能体系** | 内置十余项覆盖研发全生命周期的专属`AI`技能，涵盖后端开发、前端设计、测试编写、代码审查等场景 |
| **快速业务开发** | 开箱即用的管理工作台与丰富的内置模块，显著缩短项目从零到上线的时间 |
| **全栈一体化** | 前后端统一设计，接口契约、权限模型与设计规范完全对齐，无需独立集成两套框架 |
| **完整 API 文档** | 自动聚合主框架与所有插件接口，支持在线浏览与调试 |
| **插件生态** | 双模式插件系统（源码插件 +`WASM`动态插件），任意能力均可通过插件扩展或替换 |
| **多租户支持** | 框架原生支持多租户能力，提供官方多租户管理插件，未启用时自动回退单租户模式，迁移零成本 |
| **企业级治理** | `JWT`认证配合声明式`RBAC`权限体系，内置操作日志、登录日志、会话管理等审计能力 |
| **原生分布式** | 底层支持分布式锁、键值缓存、水平扩展，集群模式基于协调器实现高可用，无需改造业务代码 |

## 技术架构

```mermaid
graph TB
    subgraph Workflow["AI 研发工作流  openspec/"]
        direction LR
        Explore["🔍 探索"] --> Propose["📋 提案"] --> Implement["⚙️ 实现"] --> Review["🔎 审查"] --> Archive["📦 归档"]
    end

    subgraph Frontend["默认管理工作台  lina-vben"]
        UI["Vue 3 + Vben5 + Ant Design"]
    end

    subgraph Host["主框架服务  lina-core"]
        direction TB
        API["API 接口层\n(g.Meta 路由定义 + DTO)"]
        Ctrl["控制器层\n(HTTP 请求处理)"]
        Svc["业务服务层\n(核心业务逻辑)"]
        Plugin["插件运行时\n(生命周期编排 · 沙箱隔离)"]
        Tenant["原生多租户\n(bizctx · tenant_id)"]
        Gov["治理服务\n(JWT · RBAC · 日志 · 会话)"]
        API --> Ctrl --> Svc
        Svc --> Plugin
        Svc --> Tenant
        Svc --> Gov
    end

    subgraph Plugins["插件系统  apps/lina-plugins"]
        direction LR
        Source["源码插件\n随主框架编译交付"]
        Dynamic["WASM 动态插件\n运行时热加载"]
    end

    DB[("数据存储\nPostgreSQL")]
    Redis[("集群协调\nRedis")]

    Workflow -.->|规范驱动| Frontend
    Workflow -.->|规范驱动| Host
    UI -->|HTTP| API
    Plugin -->|编译加载| Source
    Plugin -->|沙箱执行| Dynamic
    Svc --> DB
    Gov --> DB
    Svc -.->|cluster.enabled=true| Redis
```

## 核心功能

### AI 原生研发工作流

`LinaPro`内置规范驱动的`AI`研发工作流，对`OpenSpec`提供良好支持。`OpenSpec`不是运行时依赖，项目不安装也可以运行；但在团队协作和持续迭代中，强烈建议安装它来获得完整的规范驱动闭环：

- 探索 → 提案 → 实现 → 审查 → 归档，每次迭代经历完整的五阶段闭环
- 每次变更均锚定在增量规范文件与强制`E2E`测试上，防止架构漂移和测试空洞
- `AI`始终基于已验证的基础向前推进，而不是凭空生成代码
- 开发者扮演方向引导者与关键决策者，需求分析、设计、实现与测试由`AI`在规范约束下完成

### 丰富的 AI 技能体系

`LinaPro`内置十余项覆盖研发全生命周期的`AI`专属技能，涵盖后端开发、前端设计、测试保障、代码审查、性能审计、版本管理等场景。这些技能以领域知识的形式内嵌于框架的`AI`协作规范中，无需额外安装，`AI`工具在处理对应场景时会自动激活，让`AI`在每个具体工作环节都能做出符合框架约束的专业决策，而无需在每次对话中重复向`AI`解释项目规范。

### 主框架与工作台解耦设计

- 主框架服务（`lina-core`）是纯后端运行时，与任何前端实现完全解耦
- 默认管理工作台（`lina-vben`）是主框架能力的参考`UI`实现，可被替换为任意前端，包括移动端、小程序或自定义管理系统
- 主框架通过稳定的`RESTful API`契约对外暴露全部能力，接口定义与前端无关
- 支持多套前端同时接入同一套主框架服务，满足不同场景的界面需求

### 主框架服务

`lina-core`是整个框架的稳定基础，提供：

- **API 契约层**：完整的`RESTful API`接口定义，覆盖系统管理、插件治理和共享平台能力
- **业务服务层**：认证、权限、用户、角色、菜单、字典、配置、文件等核心服务的统一实现
- **插件运行时**：加载源码插件和`WASM`动态插件，协调其完整生命周期，提供稳定的扩展接口
- **治理能力**：内置`JWT`认证、声明式`RBAC`权限、操作审计、会话管理等企业级治理能力
- **任务调度**：内置`Cron`定时任务子系统，支持任务分组、执行记录和异常追踪
- **基础设施**：分布式锁、键值缓存、`i18n`国际化、数据库迁移等底层能力

### 双模式插件系统

插件是`LinaPro`最主要的扩展点，每个插件是一个自包含的模块包：

- **源码插件**：编译期与主框架一同打包部署，适合长期维护的核心业务模块，性能无损耗
- **`WASM`动态插件**：运行时热加载，支持在线安装、启用、禁用与卸载，全程无需重启主框架
- 插件运行在独立隔离的沙箱，数据库与文件访问均通过命名空间隔离，插件间互不干扰
- 每个插件可独立声明`API`路由、业务逻辑、数据库表结构、前端页面与菜单，自包含零侵入

官方源码插件位于`apps/lina-plugins/`，以`Git submodule`形式挂载到主仓库。未初始化子模块时，主框架仍可独立运行；需要官方插件内容时，再执行`git submodule update --init --recursive`按需拉取。

### 企业级权限治理

- `JWT`认证配合声明式`RBAC`权限体系，权限通过`API`定义层的标签声明，天然可见可审计
- 权限粒度细至按钮级别，支持菜单、页面、操作三级精细控制
- 权限拓扑变更快速生效，单机即时、集群最长不超过3秒，无需重启服务
- 会话管理支持强制下线
- 登录日志完整记录`IP`地址、设备信息与登录结果

### 默认管理工作台

`lina-vben`是框架内置的功能完整的管理工作台，开发者可直接在此基础上构建业务应用。内置权限管理（用户、角色、菜单）、组织管理（部门、岗位）、系统设置（字典、参数、文件）、通知公告、任务调度、系统监控（在线用户、服务监控、操作与登录日志）、插件管理、在线接口文档，以及安装官方 `multi-tenant` 插件后可用的租户管理与租户插件治理等模块，覆盖企业应用的常见基础场景。

### 原生多租户支持

`LinaPro`框架原生内置多租户能力，官方提供`multi-tenant`管理插件：

- 主框架底层内置租户中间件和`bizctx`租户身份底座，是框架的稳定基础能力
- `multi-tenant`插件提供完整的租户管理功能：租户生命周期管理、用户成员关系、租户解析策略
- 未安装或未启用插件时，主框架自动回退到`tenant_id = 0`的单租户模式，开箱体验不受影响
- 支持基于`tenant_id`列的`Pool`共享数据库模型，一个用户可加入多个租户

### 原生分布式架构

- 支持单机或分布式集群两种部署模式，水平扩展无需改造业务代码
- 单机模式仅依赖`PostgreSQL`，无需额外组件；集群模式通过分布式协调器（默认`Redis`）实现选主、分布式锁和集群感知缓存
- 定时任务调度子系统具备分布式感知能力，集群环境下自动避免重复执行



## 主要技术栈

| 类别 | 技术 | 说明 |
|------|------|------|
| **后端语言** | `Go` | `v1.25.0` |
| **后端框架** | `GoFrame` | `v2.10.1`，提供路由、`ORM`、配置等全套能力 |
| **前端框架** | `Vue 3` | 基于`Vben 5`管理台模板 |
| **前端 `UI`** | `Ant Design Vue` | 企业级 `UI` 组件库 |
| **数据存储** | `PostgreSQL` | `PostgreSQL 14+`为默认数据存储 |
| **插件运行时** | `WebAssembly` | `tetratelabs/wazero`，支持`WASM`动态插件 |
